--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "consolidate": "^1.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "dust": "^0.3.0",
     "dustjs-helpers": "^1.7.4",
     "dustjs-linkedin": "^2.7.5",
